--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Playfair Display', cursive;
-    background-color: #f7f7f7;
+    background-color: #e0bdbd;
     margin: 0;
     padding: 20px;
 
@@ -23,6 +23,7 @@ h1{
     padding: 20px;
     box-shadow: 2px 2px 20px 20px rgba(0, 0, 0, 0.1);
     /* background-color: rgb(30, 29, 29); */
+    border-radius: 30px;
 }
 .dark_light{
     height: 24px;
@@ -142,7 +143,7 @@ button:hover {
 
 .projects-container li {
     
-    background: #ebebeb;
+    background: #fff2d7;
     padding: 10px;
     margin-bottom: 10px;
     display: flex;
@@ -157,7 +158,7 @@ button:hover {
 }
 
 .projects-container li button{
-    height: 35px;
+    height: 100%;
 }
 
 table{
